fix gap between main body and header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ header a {
 main {
     background-color: #FFD06A;
     flex: 1 0 auto;
-    margin-top: 128px;
+    margin-top: 108px;
 }
 
 /* Gallery */
